# Spotify_Downloader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_ar.md  README_es.md  README_fr.md  README_ru.md  README_zh.md  bundle_dependencies.bat  index.html  package-lock.json  package.json  run_dev.bat  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
python_processor/: audio_processor.py  requirements.txt  spotify_client.py
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  config.rs  errors.rs  main.rs  utils.rs
src-tauri/src/api/: mod.rs
src-tauri/src/downloader/: cache.rs  http_pool.rs  manager.rs  mod.rs  ytdlp_rust.rs
src-tauri/src/downloader/strategies/: mod.rs  python_downloader.rs  rust_ytdlp_downloader.rs
src-tauri/src/metadata/: lyrics.rs  mod.rs  musicbrainz.rs  providers.rs  spotify.rs
src-tauri/src/processing/: mod.rs
src-tauri/src/search/: central_manager.rs  mod.rs
src-tauri/src/search/clients/: mod.rs
src-tauri/src/security/: input_validation.rs  mod.rs  secure_storage.rs
src/components/: CompactTrackCard.tsx  CustomTitleBar.tsx  DownloadQueue.tsx  EnhancedProgressBar.tsx  EnhancedResultsList.tsx  Header.tsx  ResultsList.tsx  SearchBar.tsx  SettingsModal.tsx  SpotifyImport.tsx  Toast.tsx
src/hooks/: useKeyboardShortcuts.ts  useToast.ts
tests/: README.md  run_all_tests.py
